[gd_scene load_steps=4 format=3 uid="uid://c1yohkn2i03nk"]

[ext_resource type="Script" uid="uid://5gkxgd62qjv8" path="res://scenes/search hotkey.gd" id="1_q2vxh"]
[ext_resource type="Script" uid="uid://xvwwhtnb280f" path="res://GLOBAL/autocomplete lineedit/autoCompleteUi.gd" id="2_50r5t"]
[ext_resource type="Script" uid="uid://st0qaj5a08vv" path="res://GLOBAL/autocomplete lineedit/rich_text_label.gd" id="3_50r5t"]

[node name="autocomplete lineedit" type="VBoxContainer"]
script = ExtResource("2_50r5t")

[node name="search" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "search"
keep_editing_on_text_submit = true
clear_button_enabled = true
script = ExtResource("1_q2vxh")

[node name="RichTextLabel" type="RichTextLabel" parent="search" node_paths=PackedStringArray("searchBar")]
layout_mode = 0
offset_left = 3.0
offset_right = 465.0
offset_bottom = 31.0
mouse_filter = 2
bbcode_enabled = true
script = ExtResource("3_50r5t")
searchBar = NodePath("..")

[connection signal="focus_entered" from="search" to="search" method="_on_focus_entered"]
[connection signal="focus_exited" from="search" to="search" method="_on_focus_exited"]
[connection signal="gui_input" from="search" to="search" method="_on_gui_input"]
